[gd_scene load_steps=5 format=3 uid="uid://7efecgqj2pr1"]

[ext_resource type="Script" path="res://Scripts/RingContainer.gd" id="1_2hofd"]
[ext_resource type="Texture2D" uid="uid://dejigotu6yli7" path="res://Art/Previewbutton.png" id="1_b55s8"]
[ext_resource type="Theme" uid="uid://bllcmaeikx5al" path="res://Themes/ButtonTheme.tres" id="2_e8dtv"]
[ext_resource type="AudioStream" uid="uid://bndnct5yw0dv7" path="res://Audio/switch27.wav" id="3_jn34k"]

[node name="RingContainer" type="HBoxContainer"]
script = ExtResource("1_2hofd")

[node name="RingButton" type="Button" parent="."]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme = ExtResource("2_e8dtv")
text = "ALARM"

[node name="Button" type="Button" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = ExtResource("2_e8dtv")
icon = ExtResource("1_b55s8")
icon_alignment = 1

[node name="Label" type="Label" parent="."]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
text = "- Runs continuously"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_jn34k")

[connection signal="button_up" from="RingButton" to="." method="_on_ring_button_button_up"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
